@@ -687,8 +687,6 @@ extern int bfd_sym_scan
   (bfd *, bfd_sym_version, bfd_sym_data_struct *);
 extern const bfd_target * bfd_sym_object_p
   (bfd *);
-extern asymbol * bfd_sym_make_empty_symbol
-  (bfd *);
 extern void bfd_sym_get_symbol_info
   (bfd *, asymbol *, symbol_info *);
 extern long bfd_sym_get_symtab_upper_bound
